made home and photo gallery navigable

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h2>Jenny Caywood</h2>
             <p>I'm a 19 year old adventure-seeker living out my dream as a photographer! Shoot me a message on Instagram or on my website if you have any questions or want a specific shot.
               Insta @jennycaywood</p>
-            <a href="#">Photo Gallery</a>
+            <a href="Jenny Caywood/index.html">Photo Gallery</a>
           </div>
         </div>
         <div class="card">
